--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@blocknote/react": "^0.20.0",
     "@clerk/nextjs": "^5.7.5",
     "@liveblocks/client": "^2.13.0",
+    "@liveblocks/node": "^2.13.0",
     "@liveblocks/react": "^2.13.0",
     "@liveblocks/yjs": "^2.13.0",
     "@radix-ui/react-dialog": "^1.1.2",
