--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.462.0",
     "next": "15.0.3",
+    "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-firebase-hooks": "^5.1.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.1",
