--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "firebase-admin": "^13.0.1",
     "framer-motion": "^11.13.1",
     "lucide-react": "^0.462.0",
-    "next": "15.0.3",
+    "next": "^15.0.4",
     "next-themes": "^0.4.3",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
